--- a/src/components/ListOfExtension.module.scss
+++ b/src/components/ListOfExtension.module.scss
@@ -3,10 +3,12 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+
   h4 {
     margin: 20px;
     font-weight: bold;
   }
+
   ul {
     margin: 20px;
     padding-left: 5px;
@@ -18,69 +20,41 @@
     li {
       padding: 4px;
       border-radius: 8px;
+      background-color: #f0f0f0;
+      border: 1px solid gray;
+      padding: 10px;
+      margin: 5px;
+
       h3,
       p {
         font-size: 13px;
       }
     }
-  }
-}
-.waiting {
-  margin: 20px;
-  font-weight: bold;
-}
-.listItem {
-  border: 1px solid gray;
-  padding: 10px;
-  margin: 5px;
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-}
 
-.disabled {
-  opacity: 0.5;
-}
+    .unavailable {
+      opacity: 0.5;
+    }
 
-.notInUse {
-  background-color: #00b894;
-  color: #fff;
-  border: 1px solid #00b894;
-}
+    .notInUse {
+      background-color: #00b894;
+      color: #fff;
+      border: 1px solid #00b894;
+    }
 
-.highlight {
-  background-color: orange !important;
-  border: 1px solid orange;
-}
+    .inUse {
+      background-color: yellow;
+      border: 1px solid yellow;
+    }
 
-.iconHolder {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  .callIcon {
-    width: 15px;
-    height: 15px;
-    animation: shake 0.4s ease-in-out;
-    animation-iteration-count: 4;
-  }
-  span {
-    font-size: 12px;
-  }
-}
-@keyframes shake {
-  0% {
-    transform: translateX(0);
-  }
-  25% {
-    transform: translateX(-2px);
-  }
-  50% {
-    transform: translateX(2px);
-  }
-  75% {
-    transform: translateX(-2px);
-  }
-  100% {
-    transform: translateX(0);
+    .ringing {
+      background-color: orange;
+      border: 1px solid orange;
+    }
+
+    .inCall {
+      background-color: blue;
+      color: #fff;
+      border: 1px solid blue;
+    }
   }
 }
