--- a/src/components/ListOfExtension.module.scss
+++ b/src/components/ListOfExtension.module.scss
@@ -18,13 +18,28 @@
     flex-wrap: wrap;
 
     li {
+      position: relative;
       padding: 4px;
-      border-radius: 8px;
+      border-radius: 30px;
+      border-top-left-radius: 0px;
       background-color: #f0f0f0;
       border: 1px solid gray;
       padding: 10px;
       margin: 5px;
-
+      .extension {
+        position: absolute;
+        width: 32px;
+        height: 32px;
+        background-color: #494ad6;
+        border-radius: 50%;
+        color: #fff;
+        top: -15px;
+        left: -15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 13px;
+      }
       h3,
       p {
         font-size: 13px;
@@ -32,7 +47,7 @@
     }
 
     .unavailable {
-      opacity: 0.5;
+      opacity: 0.3;
     }
 
     .notInUse {
