--- a/src/components/ListOfExtension.module.scss
+++ b/src/components/ListOfExtension.module.scss
@@ -1,16 +1,32 @@
 .card {
-  width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-inline: 44px;
   flex-grow: 1;
-
+  .search_holder {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-block: 48px;
+    border-bottom: 1px solid #c4c6db;
+    width: 283px;
+    gap: 5px;
+    padding-bottom: 4px;
+    input {
+      width: inherit;
+      outline: none;
+      border: none;
+      background-color: transparent;
+    }
+  }
   h4 {
     margin: 20px;
     font-weight: bold;
   }
 
   ul {
-    margin: 20px;
     padding-left: 5px;
     list-style: none;
     display: flex;
@@ -18,6 +34,7 @@
     flex-wrap: wrap;
 
     li {
+      height: 73px;
       position: relative;
       padding: 4px;
       border-radius: 30px;
